# teams

./: .gitignore  README.md
bot/: .env.example  adaptive_card.py  app.py  bot.py  config.py  graph_client.py  pyproject.toml
bot/manifest/: manifest.json
compliance-bot/: .env.example  README.md  adaptive_card.py  app.py  bot.py  config.py  graph_client.py
functions/: Dockerfile  README.md  function_app.py  local.settings.json.example  main.py  pyproject.toml
meeting-app/: .env.example  .gitignore  Dockerfile  README.md  adaptive_card.py  app.py  bot.py  config.py  graph_client.py  pyproject.toml
meeting-app/manifest/: manifest.json  manifest.tmp.json
meeting-app/templates/: notification.html  tab.html
