[project]
name = "meeting-app"
version = "0.1.0"
description = "Teams 会議録画監視アプリ（App Setup Policy による自動配布）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "botbuilder-core>=4.17.1",
    "botbuilder-integration-aiohttp>=4.17.1",
    "botbuilder-schema>=4.17.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]
